--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@code-hike/mdx": "^0.9.0",
-    "next": "13.3.4",
-    "nextra": "2.4.2",
-    "nextra-theme-docs": "2.4.2",
+    "next": "^13.3.4",
+    "nextra": "^2.12.2",
+    "nextra-theme-docs": "^2.12.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   }
