--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "nextra-theme-docs": "^2.12.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19"
   }
 }
